kustomization/prometheus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: prom
  name: prom
spec:
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: prom
  template:
    metadata:
      labels:
        app: prom
      name: prom
    spec:
      serviceAccountName: prom
      containers:
      # Deploy Prometheus behind an oauth proxy
      - name: prom-proxy
        image: oauth-proxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
          name: web
        args:
        - -provider=openshift
        - -https-address=:8443
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:9090
        - -client-id=system:serviceaccount:$(NAMESPACE):prom
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - '-openshift-sar={"resource": "namespaces", "verb": "get", "resourceName": "$(NAMESPACE)", "namespace": "$(NAMESPACE)"}'
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -skip-auth-regex=^/metrics
        volumeMounts:
        - mountPath: /etc/tls/private
          name: prometheus-tls
        - mountPath: /etc/proxy/secrets
          name: prometheus-secrets
        - mountPath: /prometheus
          name: prometheus-data

      - name: prometheus
        args:
        - --storage.tsdb.retention=${PROMETHEUS_RETENTION}
        - --config.file=/etc/prometheus/prometheus.yml
        - --web.listen-address=:9090
        image: prometheus
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-config
        - mountPath: /prometheus
          name: prometheus-data

      # Deploy alertmanager behind an oauth proxy
      # use http port=4190 and https port=9943 to differ from prom-proxy
      - name: alerts-proxy
        image: oauth-proxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9443
          name: web
        args:
        - -provider=openshift
        - -https-address=:9443
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:9099
        - -client-id=system:serviceaccount:$(NAMESPACE):prom
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - '-openshift-sar={"resource": "namespaces", "verb": "get", "resourceName": "$(NAMESPACE)", "namespace": "$(NAMESPACE)"}'
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        volumeMounts:
        - mountPath: /etc/tls/private
          name: alerts-tls
        - mountPath: /etc/proxy/secrets
          name: alerts-secrets

      - name: alertmanager
        args:
        - --config.file=/etc/alertmanager/alertmanager.yml
        image: alertmanager
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9093
          name: web
        volumeMounts:
        - mountPath: /etc/alertmanager
          name: alertmanager-config
        - mountPath: /alertmanager
          name: alertmanager-data

      restartPolicy: Always
      volumes:
      - name: prometheus-config
        configMap:
          name: prom-config
          defaultMode: 420
      - name: prometheus-secrets
        secret:
          secretName: prom-proxy
      - name: prometheus-tls
        secret:
          secretName: prom-tls
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data-pvc
      - name: alertmanager-config
        configMap:
          name: alert-config
          defaultMode: 420
      - name: alerts-secrets
        secret:
          secretName: prom-alerts-proxy
      - name: alerts-tls
        secret:
          secretName: prom-alerts-tls
      - name: alertmanager-data
        emptyDir: {}
