kustomization/prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prom
spec:
  to:
    name: prom
  tls:
    termination: Reencrypt
    insecureEdgeTerminationPolicy: Redirect
